--- a/react-burger/src/components/AppHeader/Nav/styles.module.css
+++ b/react-burger/src/components/AppHeader/Nav/styles.module.css
@@ -1,7 +1,6 @@
-.card {
+.nav_container {
 	display: flex;
-	flex-direction: column;
 	justify-content: center;
 	align-items: center;
-  width: fit-content;
+	max-width: 400px;
 }
