--- a/react-burger/src/components/BurgerConstructor/styles.module.css
+++ b/react-burger/src/components/BurgerConstructor/styles.module.css
@@ -1,4 +1,4 @@
-.constructor-section {
+.constructor_section {
 	display: grid;
 	max-width: max-content;
 	width: 600px;
@@ -6,19 +6,19 @@
 	justify-self: start;
 }
 
-.constructor-container {
+.constructor_container {
 	display: flex;
 	flex-direction: column;
 	gap: 10px;
 }
 
-.constructor-footer {
+.constructor_footer {
 	display: flex;
 	justify-content: flex-end;
 	align-items: center;
 }
 
-.constructor-drag-item {
+.constructor_drag_item {
 	display: flex;
 	justify-content: center;
 	align-items: center;
