--- a/react-burger/src/components/BurgerIngredients/styles.module.css
+++ b/react-burger/src/components/BurgerIngredients/styles.module.css
@@ -1,34 +1,34 @@
-.ingredients-section {
-  display: grid;
+.ingredients_section {
+	display: grid;
 	max-width: 600px;
 	width: 600px;
-  align-self: center;
-  justify-self: end;
+	align-self: center;
+	justify-self: end;
 }
 
-.categories-container {
+.categories_container {
 	display: flex;
 	flex-direction: column;
 	overflow-y: scroll;
 	overflow-x: hidden;
-	max-height: 80vh;
+	max-height: 70vh;
 }
-.categories-container::-webkit-scrollbar {
+.categories_container::-webkit-scrollbar {
 	width: 8px; /* ширина для вертикального скролла */
 	height: 8px; /* высота для горизонтального скролла */
 	background-color: #2f2f37;
 }
 
 /* ползунок скроллбара */
-.categories-container::-webkit-scrollbar-thumb {
+.categories_container::-webkit-scrollbar-thumb {
 	background-color: #8585ad;
 }
 
-.categories-container::-webkit-scrollbar-thumb:hover {
+.categories_container::-webkit-scrollbar-thumb:hover {
 	background-color: #4a4a64;
 }
 
-.categories-section {
+.categories_section {
 	display: grid;
 	grid-template-columns: 1fr 1fr;
 	gap: 0px 24px;
