--- a/react-burger/src/components/BurgerConstructor/styles.module.css
+++ b/react-burger/src/components/BurgerConstructor/styles.module.css
@@ -11,7 +11,14 @@
   flex-direction: column;
   gap: 10px;
 }
-
+.non_fixed_block {
+  display: flex;
+  flex-direction: column;
+  gap: 10px;
+  max-height: 656px;
+  overflow: hidden;
+  overflow-y: visible;
+}
 .constructor_footer {
   display: flex;
   flex-direction: row;
