--- a/react-burger/src/components/BurgerIngredients/components/card-ingridient/styles.module.css
+++ b/react-burger/src/components/BurgerIngredients/components/card-ingridient/styles.module.css
@@ -1,11 +1,37 @@
 .card {
-	display: flex;
-	flex-direction: column;
-	justify-content: center;
-	align-items: center;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
   width: fit-content;
+}
+.card:hover {
+  background-color: rgba(28, 28, 33, 1);
 }
 
 .text_centered {
   text-align: center;
+}
+
+.popup {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  padding-bottom: 20px;
+}
+
+.popup_info {
+  display: flex;
+  flex-direction: row;
+  gap: 20px;
+  color: rgba(133, 133, 173, 1);
+}
+
+.popup_info_item {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  gap: 8px;
 }
