--- a/react-burger/src/components/Modal/styles.module.css
+++ b/react-burger/src/components/Modal/styles.module.css
@@ -1,8 +1,13 @@
 .modal {
+  position: fixed;
+  top: calc(50%);
+  left: calc(50% );
+  transform: translate(-50%, -50%);
   background-color: rgba(28, 28, 33, 1);
   min-width: 720px;
   padding: 40px 40px;
   border-radius: 2.5rem;
+  z-index: 1;
   box-shadow: 0 0 0 rgba(0, 0, 0, 0.04);
 }
 
