--- a/react-burger/src/components/BurgerIngredients/styles.module.css
+++ b/react-burger/src/components/BurgerIngredients/styles.module.css
@@ -1,22 +1,21 @@
 .ingredients_section {
-	display: grid;
-	max-width: 600px;
-	width: 600px;
-	align-self: center;
-	justify-self: end;
+  max-width: 600px;
+  width: 600px;
+  height: 100%;
+  justify-self: end;
 }
 
 .categories_container {
-	display: flex;
-	flex-direction: column;
-	overflow-y: scroll;
-	overflow-x: hidden;
-	max-height: 70vh;
+  display: flex;
+  flex-direction: column;
+  overflow-y: scroll;
+  overflow-x: hidden;
+  max-height: 70vh;
+	height: 70%;
 }
 
-
 .categories_section {
-	display: grid;
-	grid-template-columns: 1fr 1fr;
-	gap: 0px 24px;
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  gap: 0px 24px;
 }
