--- a/react-burger/src/index.css
+++ b/react-burger/src/index.css
@@ -4,8 +4,16 @@
   box-sizing: border-box;
 }
 
-html {
-  max-height: 100vh;
+html,
+body {
+  max-height: 100%;
+  height: 100%;
+  overflow: hidden;
+}
+
+#root {
+  max-height: 100%;
+  height: 100%;
   overflow: hidden;
 }
 
